[package]
name = "ctesias"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
bytes = "1.2.1"
chrono = "0.4.19"
hex = "0.4.3"
hifitime = "3.5.0"
ring = "0.16.20"
tokio = { version = "1", features = ["full"] }
